--- a/lab1/deployment/dev/services/docker-compose.yml
+++ b/lab1/deployment/dev/services/docker-compose.yml
@@ -5,6 +5,16 @@ services:
     environment:
       - PORT=8080
     network_mode: host
+  bid-service-2:
+    image: egorbabcinetchi/bid-service:latest
+    environment:
+      - PORT=8081
+    network_mode: host
+  bid-service-3:
+    image: egorbabcinetchi/bid-service:latest
+    environment:
+      - PORT=8082
+    network_mode: host
   invetory-service:
     image: egorbabcinetchi/inventory-service:latest
     environment:
