--- a/lab1/bid/src/main/resources/application.yml
+++ b/lab1/bid/src/main/resources/application.yml
@@ -14,9 +14,15 @@ spring:
       host: localhost
       port: 27017
       database: bid
-    redis:
-      host: localhost
-      port: 6379
+#    redis:
+#      cluster:
+#        nodes: localhost:6381,localhost:6379
+#        max-redirects: 3
+#      lettuce:
+#        cluster:
+#          refresh:
+#            adaptive: true
+#            dynamic-refresh-sources: true
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   jpa:
@@ -29,7 +35,6 @@ management:
     web:
       exposure:
         include: ["health", "info"]
-
 
 gateway:
   endpoint: http://localhost:8005
