--- a/lab1/deployment/dev/redis/docker-compose.yml
+++ b/lab1/deployment/dev/redis/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: redis:latest
     container_name: redis1
     ports:
-      - "6379:6379"
+      - "127.0.0.1:6379:6379"
     networks:
       - redis-network
     command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000"]
@@ -14,7 +14,7 @@ services:
     image: redis:latest
     container_name: redis2
     ports:
-      - "6380:6379" 
+      - "127.0.0.1:6380:6379" 
     networks:
       - redis-network
     command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000"]
@@ -23,49 +23,49 @@ services:
     image: redis:latest
     container_name: redis3
     ports:
-      - "6381:6379" 
+      - "127.0.0.1:6381:6379" 
     networks:
       - redis-network
     command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000"]
 
-  # redis4:
-  #   image: redis:latest
-  #   container_name: redis4
-  #   ports:
-  #     - "6382:6379" 
-  #   networks:
-  #     - redis-network
-  #   command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000"]
-
-  # redis5:
-  #   image: redis:latest
-  #   container_name: redis5
-  #   ports:
-  #     - "6383:6379" 
-  #   networks:
-  #     - redis-network
-  #   command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000"]
-
-  # redis6:
-  #   image: redis:latest
-  #   container_name: redis6
-  #   ports:
-  #     - "6384:6379" 
-  #   networks:
-  #     - redis-network
-  #   command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000"]
-
-  init-script:
+  redis4:
     image: redis:latest
-    depends_on:
-      - redis1
-      - redis2
-      - redis3
-      # - redis4
-      # - redis5
-      # - redis6
-    command: sh -c "sleep 10 && redis-cli --cluster create 127.0.0.1:6379 127.0.0.1:6380 127.0.0.1:6381 --cluster-replicas 0"
-    network_mode: "host"
+    container_name: redis4
+    ports:
+      - "127.0.0.1:6382:6379" 
+    networks:
+      - redis-network
+    command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000"]
+
+  redis5:
+    image: redis:latest
+    container_name: redis5
+    ports:
+      - "127.0.0.1:6383:6379" 
+    networks:
+      - redis-network
+    command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000"]
+
+  redis6:
+    image: redis:latest
+    container_name: redis6
+    ports:
+      - "127.0.0.1:6384:6379" 
+    networks:
+      - redis-network
+    command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000"]
+
+  # init-script:
+  #   image: redis:latest
+  #   depends_on:
+  #     - redis1
+  #     - redis2
+  #     - redis3
+  #     # - redis4
+  #     # - redis5
+  #     # - redis6
+  #   command: sh -c "sleep 10 && redis-cli --cluster create 127.0.0.1:6379 127.0.0.1:6380 127.0.0.1:6381 --cluster-replicas 0"
+  #   network_mode: "host"
 
 networks:
   redis-network:
