--- a/lab1/bid/pom.xml
+++ b/lab1/bid/pom.xml
@@ -60,10 +60,14 @@
 			<artifactId>jedis</artifactId>
 			<version>5.0.2</version>
 		</dependency>
-
-
-
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
